# bbbcontrol

./: .gitmodules  CMakeLists.txt  README.md
include/bbbcontrol/: application.h
include/bbbcontrol/resources/: resources.h
resources/: bundle.js  index.html
src/: application.cpp  main.cpp
src/resources/: bundle.js.s  index.html.s
web/: package-lock.json  package.json  webpack.config.js
web/public/: index.html
web/src/: index.js  main.js
web/src/api/: api.js
web/src/control/: gpio.js  leds.js  navigationtool.js  skeleton.js  timer.js
